Tidied the contact page and fixed overflowing message box on smaller devices

--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -22,14 +22,11 @@ textarea {
     overflow: scroll;
     white-space: normal;
     min-height: 25vh;
-    width: 50vh;
+    width: 30vh;
 
 }
 
-
-
 /* Contact Section */
-
 
 #contactDetails {
     grid-area: contactDetails;
